[#175740454] Align with BPD definitive views
